hacky workaround for Issue #9 (probably subpixel rounding causing the elements to wrap). Also force update of css files to new version.

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -16,7 +16,7 @@ html,body {height: 100%;width: 100%;  overflow: hidden; }
 }
 
 #text {
-    width: calc(100% - 111px);
+    width: calc(100% - 112px);
     height: 100%;
     border: none;
     margin: 0;
